fixing bugs on mobile viewport

--- a/Chat/static/css/style.css
+++ b/Chat/static/css/style.css
@@ -1927,6 +1927,7 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: none;
 }
 
+html,
 body {
   height:auto!important;
   min-height:100vh;
